Implement views GET APIs
